--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -75,7 +75,7 @@
         <span class="book-voters">1.987 voters</span>
        </div>
        <div class="book-sum">The hunt for each splinter of Paul's soul sends Marguerite racing through a war-torn San Francisco.</div>
-       <div class="book-see book-blue">See The Book</div>
+       <div (click)="openBook()" class="book-see book-blue">See The Book</div>
       </div>
      </div>
   </div>
