--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -7,7 +7,10 @@
 </ion-header>
 
 <ion-content>
-  <div #viewer id="viewer"></div>
+  <div class="parent">
+    <div class="overlay"></div>
+    <div #viewer id="viewer"></div>
+  </div>
 </ion-content>
 
 <ion-footer>
