--- a/src/app/pages/book/book.page.scss
+++ b/src/app/pages/book/book.page.scss
@@ -2,3 +2,18 @@
     height: 100%;
     font-size: 40px;
 }
+
+.parent {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
